--- a/Escuela/Escuela.csproj
+++ b/Escuela/Escuela.csproj
@@ -115,11 +115,13 @@
     <Content Include="Alumnos\alumno_i.aspx" />
     <Content Include="Alumnos\alumno_s.aspx" />
     <Content Include="Alumnos\alumno_u.aspx" />
+    <Content Include="App_Themes\Tema2\Site2.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\Login.css" />
+    <Content Include="App_Themes\Tema1\Site1.css" />
     <Content Include="Facultades\facultad_d.aspx" />
     <Content Include="Facultades\facultad_i.aspx" />
     <Content Include="Facultades\facultad_s.aspx" />
@@ -138,6 +140,7 @@
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Imagenes\contenedor.png" />
     <Content Include="Imagenes\lapiz.png" />
+    <Content Include="Imagenes\Logo.jpg" />
     <Content Include="Login.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -257,6 +260,9 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+    </Compile>
+    <Compile Include="TemaEscuela.cs">
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
