--- a/Escuela_BLL/Escuela_BLL.csproj
+++ b/Escuela_BLL/Escuela_BLL.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlumnoBLL.cs" />
+    <Compile Include="CiudadBLL.cs" />
+    <Compile Include="EstadoBLL.cs" />
     <Compile Include="FacultadBLL.cs" />
+    <Compile Include="PaisBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniversidadBLL.cs" />
     <Compile Include="UsuarioBLL.cs" />
