--- a/Escuela_DAL/Escuela_DAL.csproj
+++ b/Escuela_DAL/Escuela_DAL.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlumnoDAL.cs" />
+    <Compile Include="CiudadDAL.cs" />
+    <Compile Include="EstadoDAL.cs" />
     <Compile Include="FacultadDAL.cs" />
+    <Compile Include="PaisDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniversidadDAL.cs" />
     <Compile Include="UsuarioDAL.cs" />
